[gd_scene load_steps=5 format=3 uid="uid://dujxfl6bj7cq3"]

[ext_resource type="Script" uid="uid://cnftgkpioiv5m" path="res://scripts/characters/character.gd" id="1_1bdar"]
[ext_resource type="Texture2D" uid="uid://d2mpbv8845gv4" path="res://assets/art/characters/shadow.png" id="2_e22cc"]
[ext_resource type="PackedScene" uid="uid://b47g4b54eh622" path="res://scenes/colliders/hit_box.tscn" id="3_e22cc"]
[ext_resource type="PackedScene" uid="uid://o3m1qesbrpy1" path="res://scenes/colliders/hurt_box.tscn" id="4_2qjml"]

[node name="character" type="CharacterBody2D"]
collision_layer = 0
collision_mask = 0
script = ExtResource("1_1bdar")

[node name="ShadowSprite" type="Sprite2D" parent="."]
texture = ExtResource("2_e22cc")
centered = false
offset = Vector2(-7, 0)

[node name="CharacterSprite" type="Sprite2D" parent="."]

[node name="KnifeSprite" type="Sprite2D" parent="."]

[node name="WeaponPosition" type="Node2D" parent="KnifeSprite"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]

[node name="HitBox" parent="." instance=ExtResource("3_e22cc")]

[node name="HurtBox" parent="." instance=ExtResource("4_2qjml")]

[node name="CollateralHitBox" parent="." instance=ExtResource("3_e22cc")]

[node name="ProjectileAim" type="RayCast2D" parent="."]
target_position = Vector2(100, 0)
collision_mask = 0

[node name="CollectibleSensor" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="CollectibleSensor"]

[editable path="HitBox"]
[editable path="HurtBox"]
[editable path="CollateralHitBox"]
